Fix text selection bug on iframe (z-index)

--- a/app/assets/stylesheets/articulator.css.scss
+++ b/app/assets/stylesheets/articulator.css.scss
@@ -19,7 +19,6 @@
   height: 800px;
   right: 0;
   border: 0;
-  z-index: -1;
 }
 
 #article-form {
